<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.auth.AuthFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/guide" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/guide" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_input_layout_phone"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="false"
            app:helperTextTextColor="@android:color/holo_red_light"
            app:layout_constraintEnd_toEndOf="@id/end_guide"
            app:layout_constraintStart_toStartOf="@id/start_guide"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_number_phone"
                android:inputType="number|numberDecimal|phone"
                android:singleLine="true"
                android:text="+7 (" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_input_layout_password"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="false"
            app:helperTextTextColor="@android:color/holo_red_light"
            app:layout_constraintEnd_toEndOf="@id/end_guide"
            app:layout_constraintStart_toStartOf="@id/start_guide"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPhone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="47dp"
            android:background="@drawable/button_signin_bg"
            android:enabled="false"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/forgot_your_password"
            app:layout_constraintEnd_toStartOf="@+id/textViewRecoverPassword"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

        <TextView
            android:id="@+id/textViewRecoverPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/recover_password"
            android:textColor="@color/purple_500"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_signup_bg"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintWidth_percent="0.6"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <View
            android:id="@+id/view"
            android:layout_width="56dp"
            android:layout_height="@dimen/height_view_separator"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/or_for_registration"
            android:textAlignment="center"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

        <View
            android:id="@+id/view2"
            android:layout_width="56dp"
            android:layout_height="@dimen/height_view_separator"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_text_inf"
            android:text="@string/information_text_of_loss_of_a_phone_number"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="@id/end_guide"
            app:layout_constraintStart_toStartOf="@id/start_guide" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_text_support_number_phone"
            android:text="@string/support_phone_number"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_text_support_number_phone"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>